fix: neck size on mobile view

--- a/src/styles/modules/guitar-fretboard.scss
+++ b/src/styles/modules/guitar-fretboard.scss
@@ -2,7 +2,7 @@
 
 $neck-color: #aabee3;
 $neck-height: 225px;
-$neck-width: 100%;
+$neck-width: 1180px;
 $neck-height-with-offset: $neck-height + 20px;
 
 * {
